--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "flowbite": "^2.2.1",
     "flowbite-vue": "^0.1.2",
     "pinia": "^2.1.7",
